<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover">

    <Button
        android:id="@+id/btnNewGame_main"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/blue_button00"
        android:fontFamily="@font/crackman"
        android:text="@string/menu_main_play"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackCredits"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/yellow_button00"
        android:fontFamily="@font/crackman"
        android:text="@string/menu_main_credits"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnOption"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/btnOption"
        app:layout_constraintTop_toBottomOf="@+id/btnOption" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/grey_button00"
        android:fontFamily="@font/crackman"
        android:text="@string/menu_main_profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnBackCredits"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/btnBackCredits"
        app:layout_constraintTop_toBottomOf="@+id/btnBackCredits" />

    <Button
        android:id="@+id/btnOption"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/green_button00"
        android:fontFamily="@font/crackman"
        android:text="@string/menu_main_options"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnNewGame_main"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/btnNewGame_main"
        app:layout_constraintTop_toBottomOf="@+id/btnNewGame_main" />

</androidx.constraintlayout.widget.ConstraintLayout>