<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnHowToMove"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_button00"
        android:fontFamily="@font/prince_valiant"
        android:text="@string/tutorial_move"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnObjective"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnHowToAction"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/green_button00"
        android:fontFamily="@font/prince_valiant"
        android:text="@string/tutorial_action"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnHowToMove"
        app:layout_constraintStart_toStartOf="@+id/btnHowToMove"
        app:layout_constraintTop_toBottomOf="@+id/btnHowToMove" />

    <Button
        android:id="@+id/btnHowToActionBuild"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/grey_button00"
        android:fontFamily="@font/prince_valiant"
        android:text="@string/tutorial_action_building"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnHowToMove"
        app:layout_constraintStart_toStartOf="@+id/btnHowToMove"
        app:layout_constraintTop_toBottomOf="@+id/btnHowToAction" />

    <Button
        android:id="@+id/btnObjective"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:background="@drawable/yellow_button00"
        android:fontFamily="@font/prince_valiant"
        android:text="@string/tutorial_objetive"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnHowToAction"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnHowToAction"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackTutorial"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/red_button08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnHowToActionBuild" />
</androidx.constraintlayout.widget.ConstraintLayout>