<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/blue_button00"
        android:fontFamily="@font/crackman"
        android:text="@string/menu_options_language"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_options_language" />

    <Button
        android:id="@+id/btnVibration"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/green_button00"
        android:fontFamily="@font/crackman"
        android:text="@string/menu_options_vibration_on"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLanguage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLanguage"
        app:layout_constraintTop_toBottomOf="@+id/btnLanguage" />

    <Button
        android:id="@+id/btnMusic"
        android:layout_width="228dp"
        android:layout_height="63dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/yellow_button00"
        android:fontFamily="@font/crackman"
        android:paddingLeft="5dp"
        android:text="@string/menu_options_music_on"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnVibration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnVibration"
        app:layout_constraintTop_toBottomOf="@+id/btnVibration" />

    <Button
        android:id="@+id/btnBackOptions"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_button08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/btnMusic" />
</androidx.constraintlayout.widget.ConstraintLayout>