<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_prfile"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="58dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_button08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txvName"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_username"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvUnitsCreatedValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/txvUnitsCreated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txvUnitsCreated"
        app:layout_constraintTop_toTopOf="@+id/txvUnitsCreated" />

    <TextView
        android:id="@+id/txvUnitsLossValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvUnitsCreatedValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvUnitsCreatedValue"
        app:layout_constraintTop_toBottomOf="@+id/txvUnitsCreatedValue" />

    <TextView
        android:id="@+id/txvUnitsDestryedValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvUnitsLossValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvUnitsLossValue"
        app:layout_constraintTop_toBottomOf="@+id/txvUnitsLossValue" />

    <TextView
        android:id="@+id/txvResourcesCollectedValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvUnitsDestryedValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvUnitsDestryedValue"
        app:layout_constraintTop_toBottomOf="@+id/txvUnitsDestryedValue" />

    <TextView
        android:id="@+id/txvBuildingsCreatedValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvResourcesCollectedValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvResourcesCollectedValue"
        app:layout_constraintTop_toBottomOf="@+id/txvResourcesCollectedValue" />

    <TextView
        android:id="@+id/txvBuildingsDestroyedValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvBuildingsCreatedValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvBuildingsCreatedValue"
        app:layout_constraintTop_toBottomOf="@+id/txvBuildingsCreatedValue" />

    <TextView
        android:id="@+id/txvBuildingsLossValue"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="0"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvBuildingsDestroyedValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvBuildingsDestroyedValue"
        app:layout_constraintTop_toBottomOf="@+id/txvBuildingsDestroyedValue" />

    <TextView
        android:id="@+id/txvUnitsCreated"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_units_created"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvUsernameValue" />

    <TextView
        android:id="@+id/txvUnitsLoss"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_units_destroyed"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvUnitsCreated" />

    <TextView
        android:id="@+id/txvUnitsDestryed"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_units_loss"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvUnitsLoss" />

    <TextView
        android:id="@+id/txvResourcesCollected"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_resources_collected"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvUnitsDestryed" />

    <TextView
        android:id="@+id/txvBuildingsCreated"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_buildings_created"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvResourcesCollected" />

    <TextView
        android:id="@+id/txvBuildingsDestroyed"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_buildings_destroyed"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvBuildingsCreated" />

    <TextView
        android:id="@+id/txvBuildingsLoss"
        android:layout_width="135dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/zorque"
        android:text="@string/menu_profile_buildings_loss"
        android:textColor="@color/colorText"
        android:textColorHighlight="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txvName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvBuildingsDestroyed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:srcCompat="@android:drawable/ic_menu_add" />

    <ImageView
        android:id="@+id/btnChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txvName"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/txvName"
        app:layout_constraintTop_toTopOf="@+id/txvName"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/txvUsernameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/zorque"
        android:text="name"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toStartOf="@+id/btnChangeName"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="@+id/txvName"
        app:layout_constraintTop_toBottomOf="@+id/txvName" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="197dp"
        app:layout_constraintStart_toEndOf="@+id/txvName"
        app:layout_constraintTop_toTopOf="@+id/txvName"
        app:srcCompat="@drawable/background_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>